--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,13 +5,13 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          id="WebApp_ID" version="2.5">
 
-    <!--<display-name>MySQL DataSource Example</display-name>-->
-
-    <!--<resource-ref>-->
-        <!--<description>MySQL</description>-->
-        <!--<res-ref-name>jdbc/bull_and_cows_game</res-ref-name>-->
-        <!--<res-type>javax.sql.DataSource</res-type>-->
-        <!--<res-auth>Container</res-auth>-->
-    <!--</resource-ref>-->
+    <filter>
+        <filter-name>AuthenticationFilter</filter-name>
+        <filter-class>ru.intodayer.servlets.servlets.AuthenticationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AuthenticationFilter</filter-name>
+        <url-pattern>/game</url-pattern>
+    </filter-mapping>
 
 </web-app>
