Change name of entity UserRecord -> UserRating. Added servlet and jsp for page /rating and rating view works.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
     <filter-mapping>
         <filter-name>AuthenticationFilter</filter-name>
         <url-pattern>/game</url-pattern>
+        <url-pattern>/rating</url-pattern>
     </filter-mapping>
 
 </web-app>
