--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,7 @@
         <filter-name>AuthenticationFilter</filter-name>
         <url-pattern>/game</url-pattern>
         <url-pattern>/rating</url-pattern>
+        <url-pattern>/gameProcess</url-pattern>
     </filter-mapping>
 
 </web-app>
